# evo-crypter

./: .changelog-config.yml  .clang-format  .clang-tidy  .editorconfig  .gitignore  ALGORITHM_8md.html  CHANGELOG_8md.html  CMAKE__COMMANDS_8md.html  CMakeLists.txt  CONTRIBUTING_8md.html  Dockerfile  Doxyfile  FLAGS_8md.html  LICENSE  MUTATIONS_8md.html  Makefile  PROJECT__IDENTITY_8md.html  README.md  README_8md.html  ROADMAP_8md.html  SCRIPTS_8md.html  SECURITY_8md.html  STYLEGUIDE_8md.html  VERSIONING_8md.html  annotated.html  annotated_dup.js  classes.html  cli_8c.html  cli_8c.js  cli_8h.html  cli_8h.js  cli_8h_source.html  cli_8unit_8c.html  cli_8unit_8c.js  config_2mod_8c.html  config_2mod_8c.js  config_2mod_8h.html  config_2mod_8h.js  config_2mod_8h_source.html  config_2mod_8unit_8c.html  (+131 more)
.github/: pull_request_template.md
.github/workflows/: changelog.yml  ci.yml  deploy.yml  dev-build.yml  main-build.yml  pr-checks.yml  push-checks.yml  update-version.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  Testing.cmake
docs/: ALGORITHM.md  CMAKE_COMMANDS.md  CONTRIBUTING.md  FLAGS.md  MUTATIONS.md  PROJECT_IDENTITY.md  ROADMAP.md  SCRIPTS.md  SECURITY.md  STYLEGUIDE.md  VERSIONING.md
scripts/: build.sh  lint.sh  test.sh  test_encryption.sh  update_version.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  (+40 more)
src/: main.c
src/config/: cli.c  cli.h  cli.unit.c  mod.c  mod.h  mod.unit.c  utils.c  utils.h  utils.unit.c
src/file/: input_processing.c  input_processing.h  input_processing.unit.c  mod.c  mod.h  mod.unit.c  utils.c  utils.h  utils.unit.c
src/mutations/: mod.c  mod.h  mod.unit.c
src/mutations/functions/: fn_1.c  fn_1.unit.c  fn_2.c  fn_2.unit.c  fn_3.c  fn_3.h  fn_3.unit.c  fn_4.c  fn_4.unit.c  fn_5.c  fn_5.unit.c  fn_6.c  fn_6.unit.c  fn_7.c  fn_7.unit.c  fn_8.c  fn_8.unit.c  fn_9.c  fn_9.unit.c  fn_ampersand.c  fn_ampersand.unit.c  fn_asterisk.c  fn_asterisk.unit.c
